# irods_avu_json-ruleset

./: README.md  requirements.txt
microservices/: CMakeLists.txt
rules/: core.py  getJsonFromObj.r  getJsonSchemaFromObject.r  setJsonSchemaToObj.r  setJsonToObj.r
tests/: pep_tests.sh
